--- a/proj-one/package.json
+++ b/proj-one/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "./node_modules/mocha/bin/mocha --timeout=30000 ./test"
+		"test": "./node_modules/mocha/bin/mocha --timeout=30000 ./test/example.test.js",
+		"test:device": "./node_modules/mocha/bin/mocha --timeout=30000 ./test/device.test.js"
 	},
 	"keywords": [],
 	"author": "",
